--- a/Casterr/Styles/_Settings.scss
+++ b/Casterr/Styles/_Settings.scss
@@ -18,7 +18,7 @@
             position: absolute;
             list-style: none;
             width: 100%;
-            height: 100%;
+            height: calc(100% - 66px);
             overflow-y: auto;
 
             li {
@@ -34,7 +34,7 @@
                 }
 
                 &.save {
-                    margin: auto 10px 75px 10px;
+                    margin: auto 10px 10px 10px;
                     background-color: $qinaryColor;
 
                     a {
@@ -55,7 +55,5 @@
 
     .settingsContent {
         width: 100%;
-        height: 100vh;
-        overflow-y: auto;
     }
 }
